crates/plotnik-lib/tests/05-typegen/definitions/error_quantifier_rooted_def_unnamed_row.txt
A = (expression_statement (identifier) @id)??
Q = (program (A) @x)
------------------ DIAGNOSTICS -------------------
error: the definition names the optional itself, so each `??` element — a row of captures — is left without a type name
 --> query.ptk:1:5
  |
1 | A = (expression_statement (identifier) @id)??
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: name the element type in its own definition, then quantify a reference to it: `Elem = ...` and `(Elem)??`
